fix: prev/next character buttons not wrapping on mobile

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -456,6 +456,9 @@ main > .row {
     height: 2rem;
     padding-right: .5rem;
 }
+.text-wrap {
+    text-wrap: auto;
+}
 
 /* NOTIFICATIONS *********************************************************************************/
 
